Implement RBAC hardening and CRM dashboard improvements